--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,4 @@
 dotenv
-export SPRING_DATASOURCE_URL=$DB_URL
-export SPRING_DATASOURCE_USERNAME=$DB_USERNAME
-export SPRING_DATASOURCE_PASSWORD=$DB_PASSWORD
+export DB_URL=$DB_URL
+export DB_USERNAME=$DB_USERNAME
+export DB_PASSWORD=$DB_PASSWORD
