time lag potential fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=eventbite-backend
 
 spring.datasource.hikari.data-source-properties.preferIPv4Stack=true
 
+spring.main.lazy-initialization=true
+server.port=${PORT:8080}
 
 # Database Configuration
 spring.datasource.url=${DB_URL:jdbc:h2:mem:devdb}
