--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,23 @@
 spring.application.name=eventbite-backend
 
-spring.datasource.hikari.data-source-properties.preferIPv4Stack=true
 
-spring.main.lazy-initialization=true
 server.port=${PORT:8080}
 
-# Database Configuration
-spring.datasource.url=${DB_URL:jdbc:h2:mem:devdb}
-spring.datasource.username=${DB_USERNAME:sa}
-spring.datasource.password=${DB_PASSWORD:}
+spring.datasource.hikari.data-source-properties.preferIPv4Stack=true
 
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.main.lazy-initialization=true
+
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
+
+
