--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 
-
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
