--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=eventbite-backend
 
 
-server.port=${PORT:8080}
+server.port=${PORT:10000}
+server.address=0.0.0.0
 
 spring.datasource.hikari.data-source-properties.preferIPv4Stack=true
 
